monitoring/base/patch-kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: kube-system
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: kube-state-metrics
        args:
        - --metric-labels-allowlist
        - namespaces=[team],nodes=[cke.cybozu.com/rack,cke.cybozu.com/role,cke.cybozu.com/master]
